# rust-exchange-server

./: Cargo.toml
src/: main.rs
src/db/: balance.rs  mod.rs  order.rs  schema.rs  trade.rs  user.rs
src/db/migrations/: 20251122202756_create_users_table.up.sql  20251122202839_create_user_balance_table.up.sql  20251122204830_create_orders_table.up.sql  20251122213047_create_trades_table.up.sql
src/routes/: mod.rs  types.rs
src/service/: db.rs  mod.rs
src/service/balance_worker/: mod.rs
src/service/engine/: balance.rs  engine.rs  mod.rs  orderbook.rs  trade.rs
src/service/order_worker/: mod.rs
src/service/trade_worker/: mod.rs
