[package]
name = "rust-orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.0"
anyhow = "1.0.100"
dotenv = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono", "bigdecimal"] }
sqlx-cli = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
rust_decimal = "1.39.0"
bigdecimal = { version = "0.4.9", features = ["serde"] }
